# SRProxy

./: .clang-format  .gitignore  BasicTypesProxy.cxx  BasicTypesProxy.h  CMakeLists.txt  FlatBasicTypes.h  IBranchPolicy.h  README.md  gen_srproxy  make_ups_product.sh  parse_xml.py
app/: CMakeLists.txt  GenSRProxy.cxx  declaration_templates.h  gen_srproxy.cxx
cmake/Modules/: GenSRProxy.cmake
cmake/Templates/: SRProxyConfig.cmake.in  setup.SRProxy.sh.in
src/: BasicTypesProxy.cxx  CMakeLists.txt
src/include/SRProxy/: BasicTypesProxy.h  BasicTypesProxy.txx  FlatBasicTypes.h  IBranchPolicy.h
test/: CMakeLists.txt  epilog.h  epilog_fwd.h  extraA.h  extraC.h  gen_srproxy  prolog.h  test.h
ups/: CMakeLists.txt  NULL.in  dbconfig  get_ups_root_details.sh  srproxy.table.in  version.in
